--- a/src/app/components/styles/header.css
+++ b/src/app/components/styles/header.css
@@ -8,22 +8,19 @@
     border: 1px solid  rgb(94, 119, 75) ;
     margin-left: 8px;
     position: absolute;
+    margin-top: 3px;
     left: 10px;
 }
 .styleNavimage2{
     padding: 8px;
     border: 1px solid  rgb(94, 119, 75) ;
     margin-left: 8px;
+
+    margin-top: 3px;
     position: absolute;
     left:62px;
 }
-.styleNavimage3{
-    padding: 8px;
-    border: 1px solid  rgb(94, 119, 75) ;
-    margin-left: 8px;
-    position: absolute;
-    left:116px;
-}
+
 .createdby{
     position: absolute;
     right: 10px;
