--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,12 @@
 }
 .titlebar{
   width: 100%;
-  height: 5vh;
+  height: 50px;
   background-color: rgb(107, 149, 124);
 }
 .mainbody{
   width: 100%;
-  height: 95vh;
+  height: 94vh;
   
   background-color: rgb(220, 245, 228);
 }
